# Maths-Physique-JV-Projet

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  build.bat  build.sh  run.sh
include/: Application.hpp  ContactShapeGenerator.hpp  GameState.hpp  HumanShapeGenerator.hpp  LinkShapeGenerator.hpp  Particle.hpp  ParticleForceGenerator.hpp  ParticleForceRegistry.hpp  ParticleGravity.hpp  ParticleShapeGenerator.hpp  RigidBodyLinkShapeGenerator.hpp  RigidBodySphereShapeGenerator.hpp  RigidCubeShapeGenerator.hpp  TestApplication.hpp  Vector3f.hpp
include/collision/: BoundingVolumeSphere.hpp  CollisionDetector.hpp  CollisionResolver.hpp  octree.hpp
include/physics/: Matrix33.hpp  Matrix34.hpp  Particle.hpp  ParticleAnchoredSpring.hpp  ParticleBungeeSpring.hpp  ParticleCable.hpp  ParticleContact.hpp  ParticleContactGenerator.hpp  ParticleContactResolver.hpp  ParticleDrag.hpp  ParticleForceGenerator.hpp  ParticleForceRegistry.hpp  ParticleGravity.hpp  ParticleLink.hpp  ParticleRod.hpp  ParticleSpring.hpp  ParticuleBungeeAnchoredSpring.hpp  PhysicsEngine.hpp  Quaternion.hpp  RigidBody.hpp  Vector3f.hpp
include/render/: Buffer.hpp  BufferedShape.hpp  Camera.hpp  (+36 more)
shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
src/: Application.cpp  ContactShapeGenerator.cpp  GameState.cpp  HumanShapeGenerator.cpp  LinkShapeGenerator.cpp  Particle.cpp  ParticleForceRegistry.cpp  ParticleGravity.cpp  ParticleShapeGenerator.cpp  RigidBodyLinkShapeGenerator.cpp  RigidBodySphereShapeGenerator.cpp  RigidCubeShapeGenerator.cpp  TestApplication.cpp  Vector3f.cpp  main.cpp
(+166 files in other folders)
